--- a/index.html
+++ b/index.html
@@ -1,100 +1,203 @@
-<!DOCTYPE html>
-<html lang="th">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LIFF แชร์ Flex</title>
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-</head>
-<body>
-
-<div style="display:flex;justify-content:center;margin-top:60px;">
-  <button onclick="shareFlex()" style="font-size:20px;padding:16px 30px;border:none;border-radius:8px;cursor:pointer;">
-    แชร์ Flex ให้เพื่อนเลย!
-  </button>
-</div>
-
-<script>
-liff.init({ liffId: "2008621627-1eN2VA2x" })
-  .catch(err => console.error("LIFF init error", err));
+{
+  "type": "flex",
+  "altText": "รับ โพส แชร์ ข้อความ รูป",
+  "contents": {
+    "type": "bubble",
+    "size": "giga",
+    "hero": {
+      "type": "image",
+      "url": "https://media.giphy.com/media/ICOgUNjpvO0PC/giphy.gif",
+      "size": "full",
+      "aspectRatio": "1:1",
+      "aspectMode": "cover",
+      "animated": true
+    },
+    "body": {
+      "type": "box",
+      "layout": "vertical",
+      "contents": [
+        {
+          "type": "text",
+          "text": "ระบบ PYTHON  AUTOPOST",
+          "weight": "bold",
+          "size": "xl",
+          "align": "center",
+          "color": "#ffffff",
+          "wrap": true
+        }
+      ],
+      "backgroundColor": "#000000"
+    },
+    "footer": {
+      "type": "box",
+      "layout": "vertical",
+      "spacing": "sm",
+      "backgroundColor": "#99ffff",
+      "contents": [
+        {
+          "type": "button",
+          "style": "primary",
+          "height": "sm",
+          "action": {
+            "type": "uri",
+            "label": "โพสรูป FLEX MESSAGE",
+            "uri": "https://line.me/ti/p/~mc357.com"
+          },
+          "offsetTop": "sm"
+        },
+        {
+          "type": "button",
+          "style": "primary",
+          "height": "sm",
+          "action": {
+            "type": "uri",
+            "label": "ระบบ โพสข้อความ",
+            "uri": "https://line.me/ti/p/~mc357.com"
+          },
+          "offsetTop": "sm"
+        },
+        {
+          "type": "button",
+          "style": "primary",
+          "height": "sm",
+          "action": {
+            "type": "uri",
+            "label": "ระบบ แชร์โพสจาก VOOM",
+            "uri": "https://line.me/ti/p/~mc357.com"
+          },
+          "offsetTop": "sm"
+        },
+        {
+          "type": "button",
+          "style": "primary",
+          "height": "sm",
+          "action": {
+            "type": "uri",
+            "label": "ระบบเป็นแบบ AUTO ทำงานเอง",
+            "uri": "https://line.me/ti/p/~mc357.com"
+          },
+          "offsetTop": "sm"
+        },
+        {
+          "type": "button",
+          "style": "primary",
+          "height": "sm",
+          "action": {
+            "type": "uri",
+            "label": "ราคา ถูกสุดๆ",
+            "uri": "https://line.me/ti/p/~mc357.com"
+          },
+          "offsetTop": "sm"
+        },
+        {
+          "type": "button",
+          "style": "primary",
+          "height": "sm",
+          "action": {
+            "type": "uri",
+            "label": "ฝากโพส หรือ เหมาระบบ เรามีครบ",
+            "uri": "https://line.me/ti/p/~mc357.com"
+          },
+          "offsetTop": "sm"
+        },
+        {
+          "type": "button",
+          "style": "link",
+          "height": "sm",
+          "action": {
+            "type": "uri",
+            "label": "👇👇👇👇👇",
+            "uri": "https://line.me/ti/p/~mc357.com"
+          },
+          "offsetTop": "sm"
+        },
+        {
+          "type": "button",
+          "style": "primary",
+          "height": "sm",
+          "action": {
+            "type": "uri",
+            "label": "ขายลิ้งค์กลุ่ม ราคาถูก",
+            "uri": "https://line.me/ti/p/~mc357.com"
+          },
+          "offsetTop": "sm"
+        },
+        {
+          "type": "button",
+          "style": "primary",
+          "height": "sm",
+          "action": {
+            "type": "uri",
+            "label": "รับดึงกลุ่ม",
+            "uri": "https://line.me/ti/p/~mc357.com"
+          },
+          "offsetTop": "sm"
+        },
+        {
+          "type": "button",
+          "style": "primary",
+          "height": "sm",
+          "action": {
+            "type": "uri",
+            "label": "ขายแฟ้มระบบ พร้อมสอน",
+            "uri": "https://line.me/ti/p/~mc357.com"
+          },
+          "offsetTop": "sm"
+        },
+        {
+          "type": "button",
+          "style": "primary",
+          "height": "sm",
+          "action": {
+            "type": "uri",
+            "label": "สนใจคลิกได้เลย 👇",
+            "uri": "https://line.me/ti/p/~mc357.com"
+          },
+          "offsetTop": "sm",
+          "color": "#000000"
+        },
+        {
+          "type": "button",
+          "style": "primary",
+          "height": "sm",
+          "action": {
+            "type": "uri",
+            "label": "หรือไลน์ ไอดี mc357.com",
+            "uri": "https://line.me/ti/p/~mc357.com"
+          },
+          "offsetTop": "sm",
+          "color": "#000000"
+        },
+        {
+          "type": "button",
+          "style": "primary",
+          "height": "sm",
+          "action": {
+            "type": "uri",
+            "label": "คลิกเพื่อส่งให้เพื่อนดู😘",
+            "uri": "https://liff.line.me/2008621627-1eN2VA2x"
+          },
+          "offsetTop": "sm",
+          "color": "#000000"
+        }
+      ]
+    }
+  }
+}
 
 async function shareFlex() {
-  const flex = {
-    "type": "flex",
-    "altText": "รับ โพส แชร์ ข้อความ รูป",
-    "contents": {
-      "type": "bubble",
-      "size": "giga",
-      "body": {
-        "type": "box",
-        "layout": "vertical",
-        "contents": [
-          {
-            "type": "text",
-            "text": "ระบบ PYTHON  AUTOPOST",
-            "weight": "bold",
-            "size": "xl",
-            "wrap": true,
-            "align": "center"
-          }
-        ],
-        "backgroundColor": "#000000"
-      },
-      "footer": {
-        "type": "box",
-        "layout": "vertical",
-        "spacing": "sm",
-        "contents": [
-          {
-            "type": "button",
-            "style": "primary",
-            "height": "sm",
-            "action": {
-              "type": "uri",
-              "label": "โพสรูป FLEX MESSAGE",
-              "uri": "https://line.me/ti/p/~mc357.com"
-            }
-          },
-          {
-            "type": "button",
-            "style": "link",
-            "height": "sm",
-            "action": {
-              "type": "uri",
-              "label": "สนใจคลิกได้เลย 👇",
-              "uri": "https://line.me/ti/p/~mc357.com"
-            }
-          },
-          {
-            "type": "button",
-            "action": {
-              "type": "uri",
-              "uri": "https://line.me/ti/p/~mc357.com",
-              "label": "คลิกเพื่อส่งให้เพื่อนดู 😘"
-            },
-            "style": "primary",
-            "color": "#000000"
-          }
-        ],
-        "backgroundColor": "#99ffff"
-      }
-    }
-  };
-
   if (!liff.isInClient()) {
-    alert("⚠ เปิดในแอป LINE เท่านั้นเพื่อแชร์ให้เพื่อน");
+    alert("⚠ กรุณาเปิดผ่านแอป LINE");
     return;
   }
 
+  const flexMessage = /* วาง JSON flex ด้านบนตรงนี้เลย */;
+
   try {
-    await liff.shareTargetPicker([flex]);
+    await liff.shareTargetPicker([flexMessage]);
     alert("✨ แชร์สำเร็จ!");
-  } catch(e) {
+  } catch (e) {
     alert("❌ แชร์ไม่สำเร็จ");
     console.error(e);
   }
 }
-</script>
-
-</body>
-</html>
