--- a/index.html
+++ b/index.html
@@ -1,4 +1,28 @@
-{
+<!DOCTYPE html>
+<html lang="th">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LIFF Flex Share</title>
+  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+</head>
+<body>
+
+<div style="text-align:center; margin-top:60px;">
+  <h2>กดปุ่มเพื่อแชร์ Flex ให้เพื่อน</h2>
+  <button onclick="shareFlex()" style="font-size:20px;padding:16px 28px;border:none;border-radius:8px;cursor:pointer;">
+    แชร์ Flex ให้เพื่อนเลย!
+  </button>
+</div>
+
+<script>
+// init LIFF
+liff.init({ liffId: "2008621627-1eN2VA2x" })
+  .then(()=>console.log("LIFF init success"))
+  .catch(err=>console.error("LIFF init failed", err));
+
+// Flex JSON (ของคุณแบบเต็ม)
+const flexMessage = {
   "type": "flex",
   "altText": "รับ โพส แชร์ ข้อความ รูป",
   "contents": {
@@ -34,165 +58,43 @@
       "spacing": "sm",
       "backgroundColor": "#99ffff",
       "contents": [
-        {
-          "type": "button",
-          "style": "primary",
-          "height": "sm",
-          "action": {
-            "type": "uri",
-            "label": "โพสรูป FLEX MESSAGE",
-            "uri": "https://line.me/ti/p/~mc357.com"
-          },
-          "offsetTop": "sm"
-        },
-        {
-          "type": "button",
-          "style": "primary",
-          "height": "sm",
-          "action": {
-            "type": "uri",
-            "label": "ระบบ โพสข้อความ",
-            "uri": "https://line.me/ti/p/~mc357.com"
-          },
-          "offsetTop": "sm"
-        },
-        {
-          "type": "button",
-          "style": "primary",
-          "height": "sm",
-          "action": {
-            "type": "uri",
-            "label": "ระบบ แชร์โพสจาก VOOM",
-            "uri": "https://line.me/ti/p/~mc357.com"
-          },
-          "offsetTop": "sm"
-        },
-        {
-          "type": "button",
-          "style": "primary",
-          "height": "sm",
-          "action": {
-            "type": "uri",
-            "label": "ระบบเป็นแบบ AUTO ทำงานเอง",
-            "uri": "https://line.me/ti/p/~mc357.com"
-          },
-          "offsetTop": "sm"
-        },
-        {
-          "type": "button",
-          "style": "primary",
-          "height": "sm",
-          "action": {
-            "type": "uri",
-            "label": "ราคา ถูกสุดๆ",
-            "uri": "https://line.me/ti/p/~mc357.com"
-          },
-          "offsetTop": "sm"
-        },
-        {
-          "type": "button",
-          "style": "primary",
-          "height": "sm",
-          "action": {
-            "type": "uri",
-            "label": "ฝากโพส หรือ เหมาระบบ เรามีครบ",
-            "uri": "https://line.me/ti/p/~mc357.com"
-          },
-          "offsetTop": "sm"
-        },
-        {
-          "type": "button",
-          "style": "link",
-          "height": "sm",
-          "action": {
-            "type": "uri",
-            "label": "👇👇👇👇👇",
-            "uri": "https://line.me/ti/p/~mc357.com"
-          },
-          "offsetTop": "sm"
-        },
-        {
-          "type": "button",
-          "style": "primary",
-          "height": "sm",
-          "action": {
-            "type": "uri",
-            "label": "ขายลิ้งค์กลุ่ม ราคาถูก",
-            "uri": "https://line.me/ti/p/~mc357.com"
-          },
-          "offsetTop": "sm"
-        },
-        {
-          "type": "button",
-          "style": "primary",
-          "height": "sm",
-          "action": {
-            "type": "uri",
-            "label": "รับดึงกลุ่ม",
-            "uri": "https://line.me/ti/p/~mc357.com"
-          },
-          "offsetTop": "sm"
-        },
-        {
-          "type": "button",
-          "style": "primary",
-          "height": "sm",
-          "action": {
-            "type": "uri",
-            "label": "ขายแฟ้มระบบ พร้อมสอน",
-            "uri": "https://line.me/ti/p/~mc357.com"
-          },
-          "offsetTop": "sm"
-        },
-        {
-          "type": "button",
-          "style": "primary",
-          "height": "sm",
-          "action": {
-            "type": "uri",
-            "label": "สนใจคลิกได้เลย 👇",
-            "uri": "https://line.me/ti/p/~mc357.com"
-          },
-          "offsetTop": "sm",
-          "color": "#000000"
-        },
-        {
-          "type": "button",
-          "style": "primary",
-          "height": "sm",
-          "action": {
-            "type": "uri",
-            "label": "หรือไลน์ ไอดี mc357.com",
-            "uri": "https://line.me/ti/p/~mc357.com"
-          },
-          "offsetTop": "sm",
-          "color": "#000000"
-        },
-        {
-          "type": "button",
-          "style": "primary",
-          "height": "sm",
-          "action": {
-            "type": "uri",
-            "label": "คลิกเพื่อส่งให้เพื่อนดู😘",
-            "uri": "https://liff.line.me/2008621627-1eN2VA2x"
-          },
-          "offsetTop": "sm",
-          "color": "#000000"
-        }
+        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
+          "action": { "type": "uri", "label": "โพสรูป FLEX MESSAGE", "uri": "https://line.me/ti/p/~mc357.com" } },
+        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
+          "action": { "type": "uri", "label": "ระบบ โพสข้อความ", "uri": "https://line.me/ti/p/~mc357.com" } },
+        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
+          "action": { "type": "uri", "label": "ระบบ แชร์โพสจาก VOOM", "uri": "https://line.me/ti/p/~mc357.com" } },
+        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
+          "action": { "type": "uri", "label": "ระบบเป็นแบบ AUTO ทำงานเอง", "uri": "https://line.me/ti/p/~mc357.com" } },
+        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
+          "action": { "type": "uri", "label": "ราคา ถูกสุดๆ", "uri": "https://line.me/ti/p/~mc357.com" } },
+        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
+          "action": { "type": "uri", "label": "ฝากโพส หรือ เหมาระบบ เรามีครบ", "uri": "https://line.me/ti/p/~mc357.com" } },
+        { "type": "button", "style": "link", "height": "sm", "offsetTop": "sm",
+          "action": { "type": "uri", "label": "👇👇👇👇👇", "uri": "https://line.me/ti/p/~mc357.com" } },
+        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
+          "action": { "type": "uri", "label": "ขายลิ้งค์กลุ่ม ราคาถูก", "uri": "https://line.me/ti/p/~mc357.com" } },
+        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
+          "action": { "type": "uri", "label": "รับดึงกลุ่ม", "uri": "https://line.me/ti/p/~mc357.com" } },
+        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
+          "action": { "type": "uri", "label": "ขายแฟ้มระบบ พร้อมสอน", "uri": "https://line.me/ti/p/~mc357.com" } },
+        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm", "color": "#000000",
+          "action": { "type": "uri", "label": "สนใจคลิกได้เลย 👇", "uri": "https://line.me/ti/p/~mc357.com" } },
+        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm", "color": "#000000",
+          "action": { "type": "uri", "label": "หรือไลน์ ไอดี mc357.com", "uri": "https://line.me/ti/p/~mc357.com" } },
+        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm", "color": "#000000",
+          "action": { "type": "uri", "label": "คลิกเพื่อส่งให้เพื่อนดู😘", "uri": "https://liff.line.me/2008621627-1eN2VA2x" } }
       ]
     }
   }
-}
+};
 
+// share function
 async function shareFlex() {
   if (!liff.isInClient()) {
-    alert("⚠ กรุณาเปิดผ่านแอป LINE");
+    alert("⚠ กรุณาเปิดลิงก์ผ่านแอป LINE เพื่อแชร์ให้เพื่อน");
     return;
   }
-
-  const flexMessage = /* วาง JSON flex ด้านบนตรงนี้เลย */;
-
   try {
     await liff.shareTargetPicker([flexMessage]);
     alert("✨ แชร์สำเร็จ!");
@@ -201,3 +103,7 @@ async function shareFlex() {
     console.error(e);
   }
 }
+</script>
+
+</body>
+</html>
