--- a/index.html
+++ b/index.html
@@ -1,23 +1,5 @@
-<!DOCTYPE html>
-<html lang="th">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LIFF Flex Share</title>
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-</head>
-<body>
-
-<div style="text-align:center; margin-top:60px;">
-  <h2>กดปุ่มเพื่อแชร์ Flex ให้เพื่อน</h2>
-  <button onclick="shareFlex()" style="font-size:20px;padding:16px 28px;border:none;border-radius:8px;cursor:pointer;">
-    แชร์ Flex ให้เพื่อนเลย😍
-  </button>
-</div>
-
-<script>
-// Flex JSON ของคุณ (ครบทุกปุ่มเหมือนเดิม)
-const flexMessage = {
+// 🟦 Flex ที่ 1 (ของคุณแบบครบทุกปุ่ม)
+const flex1 = {
   "type": "flex",
   "altText": "รับ โพส แชร์ ข้อความ รูป",
   "contents": {
@@ -46,57 +28,96 @@ const flexMessage = {
       "backgroundColor": "#99ffff",
       "contents": [
         { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "โพสรูป FLEX MESSAGE", "uri": "https://line.me/ti/p/~mc357.com" } },
+          "action": { "type": "uri", "label": "โพสรูป FLEX MESSAGE", "uri": "http://line.me/ti/p/~mc357.com" } },
         { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "ระบบ โพสข้อความ", "uri": "https://line.me/ti/p/~mc357.com" } },
+          "action": { "type": "uri", "label": "ระบบ โพสข้อความ", "uri": "http://line.me/ti/p/~mc357.com" } },
         { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "ระบบ แชร์โพสจาก VOOM", "uri": "https://line.me/ti/p/~mc357.com" } },
+          "action": { "type": "uri", "label": "ระบบ แชร์โพสจาก VOOM", "uri": "http://line.me/ti/p/~mc357.com" } },
         { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "ระบบเป็นแบบ AUTO ทำงานเอง", "uri": "https://line.me/ti/p/~mc357.com" } },
+          "action": { "type": "uri", "label": "ระบบเป็นแบบ AUTO ทำงานเอง", "uri": "http://line.me/ti/p/~mc357.com" } },
         { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "ราคา ถูกสุดๆ", "uri": "https://line.me/ti/p/~mc357.com" } },
+          "action": { "type": "uri", "label": "ราคา ถูกสุดๆ", "uri": "http://line.me/ti/p/~mc357.com" } },
         { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "ฝากโพส หรือ เหมาระบบ เรามีครบ", "uri": "https://line.me/ti/p/~mc357.com" } },
+          "action": { "type": "uri", "label": "ฝากโพส หรือ เหมาระบบ เรามีครบ", "uri": "http://line.me/ti/p/~mc357.com" } },
         { "type": "button", "style": "link", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "👇👇👇👇👇", "uri": "https://line.me/ti/p/~mc357.com" } },
+          "action": { "type": "uri", "label": "👇👇👇👇👇", "uri": "http://line.me/ti/p/~mc357.com" } },
         { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "ขายลิ้งค์กลุ่ม ราคาถูก", "uri": "https://line.me/ti/p/~mc357.com" } },
+          "action": { "type": "uri", "label": "ขายลิ้งค์กลุ่ม ราคาถูก", "uri": "http://line.me/ti/p/~mc357.com" } },
         { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "รับดึงกลุ่ม", "uri": "https://line.me/ti/p/~mc357.com" } },
+          "action": { "type": "uri", "label": "รับดึงกลุ่ม", "uri": "http://line.me/ti/p/~mc357.com" } },
         { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "ขายแฟ้มระบบ พร้อมสอน", "uri": "https://line.me/ti/p/~mc357.com" } },
-        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "สนใจคลิกได้เลย 👇", "uri": "https://line.me/ti/p/~mc357.com" },
-          "color": "#000000" },
-        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "หรือไลน์ ไอดี mc357.com", "uri": "https://line.me/ti/p/~mc357.com" },
-          "color": "#000000" },
-        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "คลิกเพื่อส่งให้เพื่อนดู😘", "uri": "https://liff.line.me/2008621627-1eN2VA2x" },
-          "color": "#000000" }
+          "action": { "type": "uri", "label": "ขายแฟ้มระบบ พร้อมสอน", "uri": "http://line.me/ti/p/~mc357.com" } },
+        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm", "color": "#000000",
+          "action": { "type": "uri", "label": "สนใจคลิกได้เลย 👇", "uri": "http://line.me/ti/p/~mc357.com" } },
+        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm", "color": "#000000",
+          "action": { "type": "uri", "label": "หรือไลน์ ไอดี mc357.com", "uri": "http://line.me/ti/p/~mc357.com" } }
       ]
     }
   }
 };
 
-// init LIFF
-liff.init({ liffId: "2008621627-1eN2VA2x" });
+// 🟥 Flex ที่ 2 (ของคุณอันใหม่ — รูปติดต่อ)
+const flex2 = {
+  "type": "flex",
+  "altText": "ติดต่อเรา",
+  "contents": {
+    "type": "bubble",
+    "size": "giga",
+    "hero": {
+      "type": "image",
+      "url": "https://img2.pic.in.th/IMG_0784.jpeg",
+      "size": "full",
+      "aspectRatio": "2:3",
+      "aspectMode": "cover",
+      "action": {
+        "type": "uri",
+        "uri": "http://line.me/ti/p/~mc357.com"
+      },
+      "backgroundColor": "#000000"
+    },
+    "footer": {
+      "type": "box",
+      "layout": "vertical",
+      "spacing": "sm",
+      "contents": [
+        {
+          "type": "button",
+          "style": "primary",
+          "height": "sm",
+          "action": {
+            "type": "uri",
+            "label": "ติดต่อ คลิก!!!",
+            "uri": "http://line.me/ti/p/~mc357.com"
+          }
+        }
+      ],
+      "flex": 0,
+      "backgroundColor": "#000000"
+    }
+  }
+};
 
-// ฟังก์ชันแชร์
-async function shareFlex() {
+// 🎯 ปุ่มแชร์แยก 2 ปุ่ม
+async function shareFlex1() {
   if (!liff.isInClient()) {
-    alert("⚠ กรุณาเปิดลิงก์ผ่านแอป LINE");
+    alert("⚠ กรุณาเปิดผ่านแอป LINE");
     return;
   }
   try {
-    await liff.shareTargetPicker([flexMessage]);
-    alert("✨ แชร์สำเร็จ!");
+    await liff.shareTargetPicker([flex1]);
   } catch (e) {
-    alert("❌ แชร์ไม่สำเร็จ");
     console.error(e);
   }
 }
-</script>
 
-</body>
-</html>
+async function shareFlex2() {
+  if (!liff.isInClient()) {
+    alert("⚠ กรุณาเปิดผ่านแอป LINE");
+    return;
+  }
+  try {
+    await liff.shareTargetPicker([flex2]);
+  } catch (e) {
+    console.error(e);
+  }
+}
