--- a/index.html
+++ b/index.html
@@ -3,17 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LIFF Flex Share</title>
-
-  <!-- ✅ ปิดแคช -->
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-
-  <!-- LIFF SDK -->
+  <title>LIFF Flex Share + Generator</title>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 
-  <!-- 🎨 Style + รูปพื้นหลัง -->
   <style>
     body {
       margin: 0;
@@ -26,46 +18,63 @@
       font-family: sans-serif;
       display: flex;
       justify-content: center;
-      align-items: start;
     }
-
     .container {
-      background: rgba(0, 0, 0, 0.55);
+      background: rgba(0, 0, 0, 0.6);
       padding: 24px;
-      border-radius: 14px;
-      margin-top: 90px;
-      color: #fff;
+      border-radius: 12px;
       width: 90%;
       max-width: 420px;
+      margin-top: 80px;
+      color: #fff;
       text-align: center;
     }
-
-    button {
-      font-size: 20px;
-      padding: 14px 26px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
+    input {
       width: 100%;
-      margin-bottom: 18px;
-      transition: 0.2s;
+      padding: 14px;
+      border-radius: 8px;
+      border: none;
+      font-size: 16px;
+      margin-bottom: 16px;
     }
-    button:active {
-      transform: scale(0.96);
+    button {
+      width: 100%;
+      font-size: 18px;
+      padding: 14px;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+      margin-bottom: 14px;
     }
+    button:active { transform: scale(0.96); }
+    hr { margin: 18px 0; opacity: 0.3; }
   </style>
 </head>
 <body>
 
 <div class="container">
-  <h2>กดปุ่มเพื่อแชร์ Flex ให้เพื่อน</h2>
+  <h2 id="username">กำลังโหลดข้อมูลผู้ใช้...</h2>
 
-  <button onclick="shareFlex1()">แชร์ระบบ AutoPost 😍</button>
-  <button onclick="shareFlex2()">แชร์รูปติดต่อ 🔥</button>
+  <!-- แชร์ Flex ส่วนตัว -->
+  <button onclick="shareFlex1()">แชร์ Flex1 😍</button>
+  <button onclick="shareFlex2()">แชร์ Flex2 🔥</button>
+
+  <hr/>
+
+  <!-- Generator (ซ่อน/แสดงตาม whitelist) -->
+  <div id="generatorSection" style="display:none;">
+    <input id="genInput" placeholder="วาง: ลิงก์รูป เว้นวรรค LINE ID" />
+    <button id="genBtn" onclick="generateAndShare()">สร้างและแชร์ Flex 🚀</button>
+  </div>
 </div>
 
 <script>
-// 🔹 Flex 1 (ของคุณครบทุกปุ่ม)
+// ====== WHITELIST ผู้ใช้ (คุณแก้ userId ทีหลังเอง) ======
+const whitelistUsers = [
+  { name: "🥀⚡🖤➣ໂのနတՃั่Ձ¹✯🖤⚡🥀", userId: "u72d702258991428344e77670bb76f80a" } // 👈 แก้ทีหลัง
+];
+
+// ====== FLEX1 ของคุณ (เก็บไว้ใช้เอง/แชร์ได้) ======
 const flex1 = {
   "type": "flex",
   "altText": "รับ โพส แชร์ ข้อความ รูป",
@@ -103,27 +112,13 @@ const flex1 = {
         { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
           "action": { "type": "uri", "label": "ระบบเป็นแบบ AUTO ทำงานเอง", "uri": "http://line.me/ti/p/~mc357.com" } },
         { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "ราคา ถูกสุดๆ", "uri": "http://line.me/ti/p/~mc357.com" } },
-        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "ฝากโพส หรือ เหมาระบบ เรามีครบ", "uri": "http://line.me/ti/p/~mc357.com" } },
-        { "type": "button", "style": "link", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "👇👇👇👇👇", "uri": "http://line.me/ti/p/~mc357.com" } },
-        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "ขายลิ้งค์กลุ่ม ราคาถูก", "uri": "http://line.me/ti/p/~mc357.com" } },
-        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "รับดึงกลุ่ม", "uri": "http://line.me/ti/p/~mc357.com" } },
-        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "ขายแฟ้มระบบ พร้อมสอน", "uri": "http://line.me/ti/p/~mc357.com" } },
-        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm", "color": "#000000",
-          "action": { "type": "uri", "label": "สนใจคลิกได้เลย 👇", "uri": "http://line.me/ti/p/~mc357.com" } },
-        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm", "color": "#000000",
-          "action": { "type": "uri", "label": "หรือไลน์ ไอดี mc357.com", "uri": "http://line.me/ti/p/~mc357.com" } }
+          "action": { "type": "uri", "label": "ราคา ถูกสุดๆ", "uri": "http://line.me/ti/p/~mc357.com" } }
       ]
     }
   }
 };
 
-// 🔹 Flex 2 (รูป + ปุ่มติดต่อ)
+// ====== FLEX2 ของคุณ (เก็บไว้ใช้เอง/แชร์ได้) ======
 const flex2 = {
   "type": "flex",
   "altText": "ติดต่อเรา",
@@ -136,10 +131,7 @@ const flex2 = {
       "size": "full",
       "aspectRatio": "2:3",
       "aspectMode": "cover",
-      "action": {
-        "type": "uri",
-        "uri": "http://line.me/ti/p/~mc357.com"
-      },
+      "action": { "type": "uri", "uri": "http://line.me/ti/p/~mc357.com" },
       "backgroundColor": "#000000"
     },
     "footer": {
@@ -147,22 +139,8 @@ const flex2 = {
       "layout": "vertical",
       "spacing": "sm",
       "contents": [
-        {
-          "type": "button",
-          "style": "primary",
-          "height": "sm",
-          "action": {
-            "type": "uri",
-            "label": "ติดต่อ คลิก!!!",
-            "uri": "http://line.me/ti/p/~mc357.com"
-          }
-        },
-        {
-          "type": "box",
-          "layout": "vertical",
-          "contents": [],
-          "margin": "sm"
-        }
+        { "type": "button", "style": "primary", "height": "sm",
+          "action": { "type": "uri", "label": "ติดต่อ คลิก!!!", "uri": "http://line.me/ti/p/~mc357.com" } }
       ],
       "flex": 0,
       "backgroundColor": "#000000"
@@ -170,27 +148,99 @@ const flex2 = {
   }
 };
 
-// 🚀 init LIFF
-liff.init({ liffId: "2008621627-1eN2VA2x" }).then(() => {
-  console.log("LIFF Ready in LINE Client");
-});
+// ====== INIT LIFF + เช็ค whitelist ======
+liff.init({ liffId: "2008621627-1eN2VA2x" })
+  .then(async () => {
+    const profile = await liff.getProfile();
+    document.getElementById("username").innerText = `สวัสดีคุณ ${profile.displayName} 😊`;
 
-// 🎯 ปุ่มแชร์ที่ 1
+    const isAllowed = whitelistUsers.some(
+      user => user.name === profile.displayName && user.userId === profile.userId
+    );
+
+    if (isAllowed) {
+      document.getElementById("generatorSection").style.display = "block";
+    } else {
+      document.getElementById("generatorSection").style.display = "none";
+      console.warn("User not in whitelist");
+    }
+  })
+  .catch(err => {
+    console.error("LIFF init error", err);
+    document.getElementById("username").innerText = "❌ LIFF โหลดไม่สำเร็จ";
+  });
+
+// ====== ปุ่มแชร์ Flex1 / Flex2 ======
 async function shareFlex1() {
-  if (!liff.isInClient()) {
-    alert("⚠ กรุณาเปิดลิงก์ผ่านแอป LINE");
-    return;
-  }
+  if (!liff.isInClient()) { alert("⚠ เปิดผ่าน LINE เท่านั้น"); return; }
   await liff.shareTargetPicker([flex1]);
 }
 
-// 🎯 ปุ่มแชร์ที่ 2
 async function shareFlex2() {
-  if (!liff.isInClient()) {
-    alert("⚠ กรุณาเปิดลิงก์ผ่านแอป LINE");
+  if (!liff.isInClient()) { alert("⚠ เปิดผ่าน LINE เท่านั้น"); return; }
+  await liff.shareTargetPicker([flex2]);
+}
+
+// ====== Generator แชร์ Flex จาก input 1 ช่อง ======
+async function generateAndShare() {
+  const input = document.getElementById("genInput").value.trim();
+  if (!input.includes(" ")) {
+    alert("⚠ ใส่: ลิงก์รูป เว้นวรรค LINE ID");
     return;
   }
-  await liff.shareTargetPicker([flex2]);
+
+  const [imageUrl, lineId] = input.split(" ", 2);
+
+  const flexCarousel = {
+    "type": "flex",
+    "altText": "Flex Generator",
+    "contents": {
+      "type": "carousel",
+      "contents": [
+        {
+          "type": "bubble",
+          "size": "giga",
+          "hero": {
+            "type": "image",
+            "url": imageUrl,
+            "size": "full",
+            "aspectRatio": "2:3",
+            "aspectMode": "cover",
+            "action": { "type": "uri", "uri": `http://line.me/ti/p/~${lineId}` },
+            "backgroundColor": "#000000"
+          },
+          "footer": {
+            "type": "box",
+            "layout": "vertical",
+            "spacing": "sm",
+            "backgroundColor": "#000000",
+            "contents": [
+              {
+                "type": "button",
+                "style": "primary",
+                "height": "sm",
+                "action": {
+                  "type": "uri",
+                  "label": "ติดต่อ คลิก!!!",
+                  "uri": `http://line.me/ti/p/~${lineId}`
+                }
+              }
+            ]
+          }
+        }
+      ]
+    }
+  };
+
+  if (!liff.isInClient()) { alert("⚠ เปิดผ่าน LINE เท่านั้น"); return; }
+
+  try {
+    await liff.shareTargetPicker([flexCarousel]);
+    alert("✨ แชร์สำเร็จ!");
+  } catch (e) {
+    console.error(e);
+    alert("❌ แชร์ไม่สำเร็จ");
+  }
 }
 </script>
 
